# sched_tags

./: .gitignore  AGENTS.md  CMakeLists.txt  README.zh.md  schedql.ebnf
bench/: atomic_contention.c  run_comparison.sh
benchmark/: int_dense_bench  int_dense_bench.c  mixed_dense_bench  mixed_dense_bench.c
include/: sched_hint.h  sched_tag.h
pass/: AtomicDenseAnalysis.cpp  AtomicDenseAnalysis.h  CMakeLists.txt  ComputeDenseAnalysis.cpp  ComputeDenseAnalysis.h  SchedQLParser.cpp  SchedQLParser.h  SchedTagCommon.cpp  SchedTagCommon.h  SchedTagPass.cpp  SchedTagPass.h  SourceLabelAnalysis.cpp  SourceLabelAnalysis.h
test/: README.md  critical_section.c  priority_inversion_tags.json  priority_inversion_test.c  reader.c  reader_atomic.c  reader_dynamic.h  reader_loops.c  reader_obfuscated.c  reader_prctl.c  reader_rust.c  reader_source_labels.c  run_priority_inversion_test.sh  run_static_magic_test.sh  sched_tags_test.json  static_magic_tags.json  static_magic_test.c  static_magic_test.ll  static_magic_test_opt.ll  test_atomic.ll  test_dense.ll  test_loops.ll  test_rust_dense.rs  test_source_labels.ll
